--- a/graph/templates/graph/index.html
+++ b/graph/templates/graph/index.html
@@ -13,10 +13,14 @@
     <div class="row">
         <div class="col-6 mx-auto mt-5 text-center">
             <h1 id="app">{{ text }}</h1>
+
+            <canvas id="chart" width="400" height="200"></canvas>
         </div>
     </div>
 </div>
 
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"></script>
 <script src="{% static 'main.js' %}"></script>
 </body>
 </html>
